[package]
name = "efi-runner"
version = "0.1.0"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
description = "A runner for EFI executables."
repository = "https://github.com/valentinegb/efi-runner"
license = "MIT"
keywords = ["runner", "efi", "uefi"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
