[package]
name = "efi-runner"
version = "0.1.1"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
description = "A runner for EFI executables using QEMU and OVMF."
repository = "https://github.com/valentinegb/efi-runner"
license = "MIT"
keywords = ["runner", "efi", "uefi"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.8.0"
uefi-run = { version = "0.6.1", artifact = "bin" }
